--- a/glossario.tex
+++ b/glossario.tex
@@ -1,42 +1,27 @@
 \chapter{Glossario dei termini e degli acronimi}
 \begin{description}
-    \item[IoT] Internet of Things --- Insieme di dispositivi interconnessi che comunicano tra loro via rete.
-    \item[Smart Home] Abitazione intelligente in cui dispositivi e impianti sono automatizzati e controllabili a distanza.
+    \item[IoT] Insieme di dispositivi e sensori collegati a Internet, capaci di comunicare autonomamente e rendere intelligenti ambienti e oggetti quotidiani.
     \item[BLE] Bluetooth Low Energy --- Standard wireless a basso consumo energetico.
     \item[Zigbee] Protocollo wireless basato su IEEE 802.15.4, ottimizzato per reti mesh a corto raggio.
     \item[Z-Wave] Protocollo wireless a bassa potenza, usato per applicazioni di domotica.
     \item[Wi-Fi] Wireless Fidelity --- Tecnologia di rete locale senza fili basata su IEEE 802.11.
     \item[Thread] Protocollo di rete IPv6-based pensato per dispositivi IoT.
     \item[Matter] Standard aperto per l'interoperabilità tra dispositivi smart, sviluppato dalla CSA.
-    \item[HomeKit] Framework Apple per l'integrazione e gestione di dispositivi smart home.
+    \item[HomeKit] Piattaforma sviluppata da Apple per controllare e gestire in maniera semplice e sicura i dispositivi domestici intelligenti tramite dispositivi iOS.
     \item[Gateway] Dispositivo che consente la comunicazione tra reti o protocolli differenti.
     \item[API] Application Programming Interface --- Interfaccia che permette l'interazione tra software.
-    \item[Hub] Dispositivo centrale che coordina il traffico e l'automazione dei dispositivi smart.
-    \item[CSA] Connectivity Standards Alliance --- Organismo che promuove standard aperti per l'IoT.
-    \item[NIST] National Institute of Standards and Technology --- Agenzia USA per standard e tecnologie.
-
+    \item[Hub] Dispositivo che agisce da centro di controllo, permettendo a diversi dispositivi smart di comunicare tra loro e con l'utente.
     \item[KNX] Standard aperto per l'automazione degli edifici, utilizzato principalmente in sistemi cablati per applicazioni domotiche.
-    \item[NIST IoT Security] Linee guida e best practice sulla sicurezza IoT definite dal National Institute of Standards and Technology.
-
-    \item[Rete mesh] Una rete in cui ogni dispositivo si connette direttamente ad altri dispositivi vicini, migliorando copertura e affidabilità.
+    \item[Rete mesh] Tipologia di rete in cui ciascun dispositivo è collegato direttamente a più altri, aumentando l'affidabilità e l'efficienza nella comunicazione.
     \item[IPv6] Versione più recente del protocollo Internet, che consente un numero quasi illimitato di indirizzi IP.
     \item[Hub centrale] Dispositivo centrale che coordina e gestisce le comunicazioni tra dispositivi intelligenti in una rete domotica.
-
-
     \item[RS-485] Standard di comunicazione seriale cablato, resistente alle interferenze e utilizzato principalmente in ambienti industriali e domotici per connessioni su lunghe distanze.
-    \item[Bluetooth Low Energy (BLE)] Versione del protocollo Bluetooth a basso consumo energetico, particolarmente adatta per dispositivi IoT con alimentazione a batteria.
-
-    \item[VLAN] Virtual Local Area Network --- Una rete logica separata all'interno della stessa infrastruttura fisica, utilizzata per segmentare e proteggere la rete domestica.
-    \item[IDS] Intrusion Detection System --- Sistema di monitoraggio del traffico di rete per individuare attività sospette o non autorizzate.
-    \item[Firmware] Software installato su dispositivi hardware IoT, responsabile della gestione diretta delle funzionalità del dispositivo.
+    \item[VLAN] Rete virtuale che separa logicamente gruppi di dispositivi all'interno della stessa rete fisica, migliorando sicurezza e gestione.
+    \item[IDS] Sistema che monitora il traffico di rete per identificare e segnalare eventuali intrusioni o attività sospette non autorizzate.
+    \item[Firmware] Software fondamentale, installato permanentemente sui dispositivi hardware per controllare direttamente le loro operazioni di base.
     \item[DTLS] Datagram Transport Layer Security --- Protocollo di sicurezza che fornisce comunicazioni cifrate per dispositivi con risorse limitate, basato su UDP.
-    \item[Man-in-the-Middle (MitM)] Tipo di attacco informatico in cui un aggressore intercetta e potenzialmente manipola la comunicazione tra due dispositivi.
-
-
-    \item[VLAN] Virtual Local Area Network --- Rete logica separata all’interno della stessa infrastruttura fisica, utilizzata per segmentare e proteggere la rete domestica.
-    \item[IDS] Intrusion Detection System --- Sistema di monitoraggio del traffico di rete per individuare attività sospette o non autorizzate.
-    \item[Firmware] Software installato su dispositivi hardware IoT, responsabile della gestione diretta delle funzionalità del dispositivo.
+    \item[VLAN] Rete virtuale che separa logicamente gruppi di dispositivi all'interno della stessa rete fisica, migliorando sicurezza e gestione.
+    \item[IDS] Sistema che monitora il traffico di rete per identificare e segnalare eventuali intrusioni o attività sospette non autorizzate.
+    \item[Firmware] Software fondamentale, installato permanentemente sui dispositivi hardware per controllare direttamente le loro operazioni di base.
     \item[DTLS] Datagram Transport Layer Security --- Protocollo di sicurezza che fornisce comunicazioni cifrate per dispositivi con risorse limitate, basato su UDP.
-    \item[Man-in-the-Middle (MitM)] Tipo di attacco informatico in cui un aggressore intercetta e potenzialmente manipola la comunicazione tra due dispositivi.
-
 \end{description}
